--- a/releases/index.yml
+++ b/releases/index.yml
@@ -2,3 +2,5 @@
 builds:
   2eda19418abfd62e123b9c33e3f9aafde8cdd903:
     version: '1'
+  2cf33dde8852d0f75f694eb5f62cd5f4c88894b5:
+    version: '2'
