--- a/releases/index.yml
+++ b/releases/index.yml
@@ -4,3 +4,5 @@ builds:
     version: '1'
   2cf33dde8852d0f75f694eb5f62cd5f4c88894b5:
     version: '2'
+  !binary "YzJhYTRkZjZhNTg1ZWVlNmZlZTU1NGMzYmRlOGY1NmFlYzlkY2NlNg==":
+    version: '3'
