--- a/releases/index.yml
+++ b/releases/index.yml
@@ -8,4 +8,6 @@ builds:
     version: '3'
   e3a05671-e8b5-430d-9a20-ddf90b2e9408:
     version: '4.0'
+  433d7c72-38be-420e-8b5f-cfb767b070c6:
+    version: '4.1'
 format-version: '2'
