--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -11,3 +11,7 @@ logstash/logstash-1.4.2.tar.gz:
   object_id: 7f609961-8eb8-4af7-adfc-7aad62eb382a
   sha: d59ef579c7614c5df9bd69cfdce20ed371f728ff
   size: 85619205
+java/openjdk-jre-trusty-1.7.0_65.tar.gz:
+  object_id: 68429dac-c03d-4dca-b796-1001250a9cb9
+  sha: 65f4e665b0a736e861fedaa60560ba72ed19474c
+  size: 31606629
