--- a/.final_builds/jobs/logstash-syslog/index.yml
+++ b/.final_builds/jobs/logstash-syslog/index.yml
@@ -12,4 +12,8 @@ builds:
     version: 9e527c3f387f7fd62e9c49cf212ab80fe5fb17fb
     sha1: 44359995dbe8e27102fd8c2ee50ecb8929f1e958
     blobstore_id: 247b2602-e031-4b82-9959-b12a28f14cb6
+  7f1251dd0ed9255a5e371443a1c4207cb8251540:
+    version: 7f1251dd0ed9255a5e371443a1c4207cb8251540
+    sha1: 009b713c19d601f52b10e3cd85dbe8dc1151a174
+    blobstore_id: 6e362346-7dc4-4c34-a6d6-5b6faa7f2dad
 format-version: '2'
