--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -3,3 +3,7 @@ logstash/logstash-1.4.2.tar.gz:
   object_id: 7f609961-8eb8-4af7-adfc-7aad62eb382a
   sha: d59ef579c7614c5df9bd69cfdce20ed371f728ff
   size: 85619205
+java/openjdk-jre-trusty-1.8.0_25.tar.gz:
+  object_id: 542be921-0c75-4682-8cc0-a3f49e866af2
+  sha: 33252952b6514d7fca61b61a2d7d1f812e741a03
+  size: 39158212
