--- a/.final_builds/jobs/logstash-indexer/index.yml
+++ b/.final_builds/jobs/logstash-indexer/index.yml
@@ -27,4 +27,8 @@ builds:
     version: 13b6a028b175b3790f2a3f9352983492d6123f36
     sha1: 244ea9dab4acc87d07b8567c31ac67b66349b6ac
     blobstore_id: 66e1f018-3601-40b9-9751-b122dbc840cc
+  357dec73b96018b4659bd5f81c1ce495e5034aec:
+    version: 357dec73b96018b4659bd5f81c1ce495e5034aec
+    sha1: 1c7c75b657c4f1872b2f7e47a82e1e3f70f76f8e
+    blobstore_id: 01d4d5aa-66d6-4aa1-80d9-7ccdee2fa5fd
 format-version: '2'
