--- a/.final_builds/packages/java/index.yml
+++ b/.final_builds/packages/java/index.yml
@@ -4,4 +4,8 @@ builds:
     version: 64f09b3eac50dca8c6f48f57d85833f1c15f3d7d
     sha1: 06a904c78f2e041b9097d2f44e73d4e2dee34cd8
     blobstore_id: 2fb36647-ab71-4e92-9b6c-4f54b841fe46
+  781d85b49608f57328d984f8456c7b735eee09f9:
+    version: 781d85b49608f57328d984f8456c7b735eee09f9
+    sha1: 09c0e642323e584ed65429700f15afc04cd03dba
+    blobstore_id: 66dc6fe4-fb50-439e-942e-966f8a0440a5
 format-version: '2'
