--- a/.final_builds/jobs/logstash-indexer/index.yml
+++ b/.final_builds/jobs/logstash-indexer/index.yml
@@ -31,4 +31,8 @@ builds:
     version: 357dec73b96018b4659bd5f81c1ce495e5034aec
     sha1: 1c7c75b657c4f1872b2f7e47a82e1e3f70f76f8e
     blobstore_id: 01d4d5aa-66d6-4aa1-80d9-7ccdee2fa5fd
+  31ebd1accbafff3438f6162e5d7828e615069488:
+    version: 31ebd1accbafff3438f6162e5d7828e615069488
+    sha1: bb967a272f6c64d405c812be9ab8f164b5a4a618
+    blobstore_id: 4a0493e3-5451-4fd5-8c51-b97794f8ce1e
 format-version: '2'
