--- a/.final_builds/jobs/logstash-cf/index.yml
+++ b/.final_builds/jobs/logstash-cf/index.yml
@@ -16,4 +16,8 @@ builds:
     version: 0e7b8bce962bf5bddeb9844e831baf81cb66daf6
     sha1: 4b9c215b7888602d1a757390a257864e63e02ef9
     blobstore_id: 09c9ecf8-0c7a-4afb-b593-ae38dc88e639
+  80df9b2b864c739a0203f3c1b0b928022f53a7a4:
+    version: 80df9b2b864c739a0203f3c1b0b928022f53a7a4
+    sha1: 9ea7d80fdf4a076e91cc8733becfe142a4093d61
+    blobstore_id: 04db3aac-1faf-4b60-b93e-63a8fb9fbd4a
 format-version: '2'
