new release for new ES cluster

--- a/.final_builds/jobs/logstash-cf/index.yml
+++ b/.final_builds/jobs/logstash-cf/index.yml
@@ -20,4 +20,8 @@ builds:
     version: 80df9b2b864c739a0203f3c1b0b928022f53a7a4
     sha1: 9ea7d80fdf4a076e91cc8733becfe142a4093d61
     blobstore_id: 04db3aac-1faf-4b60-b93e-63a8fb9fbd4a
+  423c80615fdef2dbe9b43b168e83cf315160607b:
+    version: 423c80615fdef2dbe9b43b168e83cf315160607b
+    sha1: 9fe18048c20ec0042c1868cd38cf09ab4c4e5ef4
+    blobstore_id: 1235dd45-09e2-418e-8c85-8afbc8acdd5b
 format-version: '2'
