--- a/releases/index.yml
+++ b/releases/index.yml
@@ -26,4 +26,6 @@ builds:
     version: '6.4'
   e9b35967-f819-4307-9ab3-a0cf2a4d0003:
     version: '6.5'
+  d9c9e22f-8ee3-4d58-a9e6-3e41f4f52965:
+    version: '6.6'
 format-version: '2'
