--- a/releases/index.yml
+++ b/releases/index.yml
@@ -28,4 +28,6 @@ builds:
     version: '6.5'
   d9c9e22f-8ee3-4d58-a9e6-3e41f4f52965:
     version: '6.6'
+  09da89d4-5d07-4fce-aaeb-33015e2322ba:
+    version: '6.7'
 format-version: '2'
