--- a/.final_builds/packages/logstash/index.yml
+++ b/.final_builds/packages/logstash/index.yml
@@ -4,3 +4,8 @@ builds:
     blobstore_id: 8fa0e833-2c75-46b1-bc65-175e6623d74b
     version: 76a553a84c96df036d86a2fc74fad817abf7a751
     sha1: abbad91be2b16b771ca9c6128076b86211b83035
+  555ea4e338cf7df5a202d49a72c30c08e86cf8db:
+    version: 555ea4e338cf7df5a202d49a72c30c08e86cf8db
+    sha1: 83a0217076205315f1e010777b9f45347d8aa6be
+    blobstore_id: b85cce49-550b-4eee-a73a-514c8a1c77d7
+format-version: '2'
