--- a/.final_builds/packages/java/index.yml
+++ b/.final_builds/packages/java/index.yml
@@ -8,4 +8,8 @@ builds:
     version: 781d85b49608f57328d984f8456c7b735eee09f9
     sha1: 09c0e642323e584ed65429700f15afc04cd03dba
     blobstore_id: 66dc6fe4-fb50-439e-942e-966f8a0440a5
+  1dab29614aba5dcec2bc03c1dd7c06ad2e803212:
+    version: 1dab29614aba5dcec2bc03c1dd7c06ad2e803212
+    sha1: c252cbc7b057392444af7fdcdbf88e198b829324
+    blobstore_id: b5b04f91-387b-4215-8931-963af387c107
 format-version: '2'
