--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 config/dev.yml
 config/private.yml
 config/settings.yml
-releases/*.tgz
+releases/**/*.tgz
 dev_releases
+release
 blobs/*
 .blobs
 .dev_builds
@@ -17,5 +18,4 @@ blobs/*
 #*
 tmp
 my*.yml
-releases/**/*.tgz
-blobs
+*credentials.yml
