--- a/config/final.yml
+++ b/config/final.yml
@@ -1,6 +1,6 @@
 ---
-final_name: logstash-hybris
+final_name: logstash
 blobstore:
   provider: s3
   options:
-    bucket_name: blobs.hybris.com/logstash
+    bucket_name: blobs-yaas-idefix/logstash-boshrelease
